--- a/index.html
+++ b/index.html
@@ -3,24 +3,31 @@
 
 <head>
 	<meta charset="UTF-8">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>WebStudio</title>
+	<link rel="preconnect" href="https://fonts.gstatic.com">
+	<link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
+		rel="stylesheet">
+	<link rel="stylesheet" href="./css/styles.css"
 </head>
 
 <body>
 	<!--Шапка сайта-->
-	<header>
+	<header class="page-header">
 		<nav>
-			<a href="./index.html" lang="en">WebStudio</a>
+			<a href="./index.html" class="logo" lang="en"><span>Web</span>Studio</a>
 
 			<!--Навигация на другие страницы-->
-			<ul>
+			<ul class="site-nav">
 				<li><a href="./index.html">Студия</a></li>
-				<li><a href="">Портфолио</a></li>
+				<li><a href="./Portfolio.html">Портфолио</a></li>
 				<li><a href="">Контакты</a></li>
 			</ul>
 		</nav>
-		<ul>
+
+		<!--Контакты-->
+		<ul class="contact-header">
 			<li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
 			<li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
 		</ul>
