--- a/index.html
+++ b/index.html
@@ -1,35 +1,35 @@
 <!DOCTYPE html>
 <html lang="ru">
 
-<head>
-	<meta charset="UTF-8">
-	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>WebStudio</title>
-	<link rel="preconnect" href="https://fonts.gstatic.com">
-	<link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
+ <head>
+	 <meta charset="UTF-8">
+	 <meta http-equiv="X-UA-Compatible" content="IE=edge">
+	 <meta name="viewport" content="width=device-width, initial-scale=1.0">
+	 <title>WebStudio</title>
+	 <link rel="preconnect" href="https://fonts.gstatic.com">
+	 <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
 		rel="stylesheet">
-	<link rel="stylesheet" href="./css/styles.css"
-</head>
+	 <link rel="stylesheet" href="./css/styles.css">
+ </head>
 
 <body>
 	<!--Шапка сайта-->
 	<header class="page-header">
 		<nav>
-			<a href="./index.html" class="logo" lang="en"><span>Web</span>Studio</a>
+			<a href="./index.html" class="logo text" lang="en"><span>Web</span>Studio</a>
 
 			<!--Навигация на другие страницы-->
-			<ul class="site-nav">
-				<li><a href="./index.html">Студия</a></li>
-				<li><a href="./Portfolio.html">Портфолио</a></li>
-				<li><a href="">Контакты</a></li>
+			<ul class="site-nav list ">
+				<li><a href="./index.html" class="link text">Студия</a></li>
+				<li><a href="./Portfolio.html" class="link text">Портфолио</a></li>
+				<li><a href="" class="link text">Контакты</a></li>
 			</ul>
 		</nav>
 
 		<!--Контакты-->
-		<ul class="contact-header">
-			<li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-			<li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
+		<ul class="contact-header list">
+			<li><a href="mailto:info@devstudio.com" class="link text">info@devstudio.com</a></li>
+			<li><a href="tel:+380961111111" class="link text">+38 096 111 11 11</a></li>
 		</ul>
 	</header>
 
@@ -37,34 +37,34 @@
 	<main>
 
 	<!--Герой-->
-	<section>
-		<h1>Эффективные решения для вашего бизнеса</h1>
-		<button type="button">Заказать услугу</button>
+	<section class="section-hero">
+		<h1 class="hero-title">Эффективные решения<br> для вашего бизнеса</h1>
+		<button type="button" class="button">Заказать услугу</button>
 	</section>
 
 	<!--Профессиональные качества-->
-	<section>
-		<ul>
+	<section class="section">
+		<ul class="section-quality list">
 			<li>
-				<h3>Внимание к деталям</h3>
+				<h3 class="section-title">Внимание к деталям</h3>
 				<p>
 					Идейные соображения, а также начало повседневной работы по формированию позиции.
 				</p>
 			</li>
 			<li>
-				<h3>Пунктуальность</h3>
+				<h3 class="section-title">Пунктуальность</h3>
 				<p>
 					Задача организации, в особенности же рамки и место обучения кадров влечет за собой.
 				</p>
 			</li>
 			<li>
-				<h3>Планирование</h3>
+				<h3 class="section-title">Планирование</h3>
 				<p>
 					Равным образом консультация с широким активом в значительной степени обуславливает.
 				</p>
 			</li>
 			<li>
-				<h3>Современные технологии</h3>
+				<h3 class="section-title">Современные технологии</h3>
 				<p>
 					Значимость этих проблем настолько очевидна, что реализация плановых заданий.
 				</p>
@@ -73,9 +73,9 @@
 	</section>
 
 	<!--Чем мы занимаемся-->
-	<section>
-		<h2>Чем мы занимаемся</h2>
-		<ul>
+	<section class="examples">
+		<h2 class="section-title">Чем мы занимаемся</h2>
+		<ul class="section-examples list">
 			<li>
 				<img src="./images/working_out/img_1.jpg" alt="проектирование" width="370" height="294">
 			</li>
@@ -83,33 +83,33 @@
 				<img src="./images/working_out/img_2.jpg" alt="дизайн" width="370" height="294">
 			</li>
 			<li>
-				<img src="./images/" alt="интерактивность" width="370" height="294">
+				<img src="./images/working_out/img_3.jpg" alt="интерактивность" width="370" height="294">
 			</li>
 		</ul>
 	</section>
 
 	<!--Презентация команды-->
-	<section>
-		<h2>Наша команда</h2>
-		<ul>
-			<li>
+	<section class="section-team">
+		<h2 class="section-title">Наша команда</h2>
+		<ul class="team-members list">
+			<li class="members-name">
 				<img src="./images/team/img_team_1.jpg" alt="сотрудник команды игорь" width="270" height="260">
-				<h3>Игорь Демьяненко</h3>
+				<h3 class="section-title">Игорь Демьяненко</h3>
 				<p>Product Designer</p>
 			</li>
-			<li>
+			<li class="members-name">
 				<img src="./images/team/img_team_2.jpg" alt="coотрудник команды ольга" width="270" height="260">
-				<h3>Ольга Репина</h3>
+				<h3 class="section-title">Ольга Репина</h3>
 				<p>Frontend Developer</p>
 			</li>
-			<li>
+			<li class="members-name">
 				<img src="./images/team/img_team_3.jpg" alt="cотрудник команды николай" width="270" height="260">
-				<h3>Николай Тарасов</h3>
+				<h3 class="section-title">Николай Тарасов</h3>
 				<p>Marketing</p>
 			</li>
-			<li>
+			<li class="members-name">
 				<img src="./images/team/img_team_4.jpg" alt="cотрудник команды михаил" width="270" height="260">
-				<h3>Михаил Ермаков</h3>
+				<h3 class="section-title">Михаил Ермаков</h3>
 				<p>UI Designer</p>
 			</li>
 		</ul>
@@ -117,19 +117,19 @@
 	</main>
 
 	<!--Адресные данные (футер)-->
-	<footer>
-		<a href="./index.html">WebStudio</a>
-		<address>
-			<ul>
+	<footer class="footer">
+		<a href="./index.html" class="logo text" lang="en"><span>Web</span>Studio</a>
+		<address class="address">
+			<ul class="footer-contacts list">
 				<li>
-					<a href="https://goo.gl/maps/fqdsJeKu8w5rpEoA8" target="_blank" rel="noopener noreferrer">г. Киев, пр-т Леси
+					<a href="https://goo.gl/maps/fqdsJeKu8w5rpEoA8" class="our-address text" target="_blank" rel="noopener noreferrer">г. Киев, пр-т Леси
 						Украинки, 26</a>
 				</li>
 				<li>
-					<a href="mailto:info@example.com">info@example.com</a>
+					<a href="mailto:info@example.com" class="link text">info@example.com</a>
 				</li>
 				<li>
-					<a href="tel:+380991111111">+38 099 111 11 11</a>
+					<a href="tel:+380991111111" class="link text">+38 099 111 11 11</a>
 				</li>
 			</ul>
 		</address>
