--- a/index.html
+++ b/index.html
@@ -12,127 +12,132 @@
 	 <link rel="stylesheet" href="./css/styles.css">
  </head>
 
-<body>
-	<!--Шапка сайта-->
-	<header class="page-header">
-		<nav>
+	<body>
+		<!--Header-->
+		<header class="page-header">
+			<nav>
+				<a href="./index.html" class="logo text" lang="en"><span>Web</span>Studio</a>
+
+				<!--Site navigation-->
+				<ul class="site-nav list ">
+					<li><a href="./index.html" class="link text">Студия</a></li>
+					<li><a href="./Portfolio.html" class="link text">Портфолио</a></li>
+					<li><a href="" class="link text">Контакты</a></li>
+				</ul>
+			</nav>
+
+			  <!--Contacts-->
+				<ul class="contact-header list">
+					<li><a href="mailto:info@devstudio.com" class="link text">info@devstudio.com</a></li>
+					<li><a href="tel:+380961111111" class="link text">+38 096 111 11 11</a></li>
+				</ul>
+		</header>
+
+		<!--Unique page content-->
+		<main>
+
+		<!--Hero-->
+			<section class="section-hero">
+				<h1 class="hero-title">Эффективные решения<br> для вашего бизнеса</h1>
+				<button type="button" class="button">Заказать услугу</button>
+			</section>
+
+			<!--Professional quality-->
+			<section class="section-quality">
+
+				<!-- Hidden title -->
+				<h2 class="hidden-title">профессиональные качества</h2>
+
+				<!-- Qualities list -->
+				<ul class="qualities-list list">
+					<li>
+						<h3 class="section-title">Внимание к деталям</h3>
+						<p>
+							Идейные соображения, а также начало повседневной работы по формированию позиции.
+						</p>
+					</li>
+					<li>
+						<h3 class="section-title">Пунктуальность</h3>
+						<p>
+							Задача организации, в особенности же рамки и место обучения кадров влечет за собой.
+						</p>
+					</li>
+					<li>
+						<h3 class="section-title">Планирование</h3>
+						<p>
+							Равным образом консультация с широким активом в значительной степени обуславливает.
+						</p>
+					</li>
+					<li>
+						<h3 class="section-title">Современные технологии</h3>
+						<p>
+							Значимость этих проблем настолько очевидна, что реализация плановых заданий.
+						</p>
+					</li>
+				</ul>
+			</section>
+
+			<!--What are we doing-->
+			<section class="section-we-doing">
+				<h2 class="section-title">Чем мы занимаемся</h2>
+				<ul class="we-doing-examples list">
+					<li>
+						<img src="./images/working_out/img_1.jpg" alt="проектирование" width="370" height="294">
+					</li>
+					<li>
+						<img src="./images/working_out/img_2.jpg" alt="дизайн" width="370" height="294">
+					</li>
+					<li>
+						<img src="./images/working_out/img_3.jpg" alt="интерактивность" width="370" height="294">
+					</li>
+				</ul>
+			</section>
+
+		<!--Team presentation-->
+			<section class="section-team">
+				<h2 class="section-title">Наша команда</h2>
+				<ul class="team-members list">
+					<li class="members-name">
+						<img src="./images/team/img_team_1.jpg" alt="сотрудник команды игорь" width="270" height="260">
+						<h3 class="section-title">Игорь Демьяненко</h3>
+						<p>Product Designer</p>
+					</li>
+					<li class="members-name">
+						<img src="./images/team/img_team_2.jpg" alt="coотрудник команды ольга" width="270" height="260">
+						<h3 class="section-title">Ольга Репина</h3>
+						<p>Frontend Developer</p>
+					</li>
+					<li class="members-name">
+						<img src="./images/team/img_team_3.jpg" alt="cотрудник команды николай" width="270" height="260">
+						<h3 class="section-title">Николай Тарасов</h3>
+						<p>Marketing</p>
+					</li>
+					<li class="members-name">
+						<img src="./images/team/img_team_4.jpg" alt="cотрудник команды михаил" width="270" height="260">
+						<h3 class="section-title">Михаил Ермаков</h3>
+						<p>UI Designer</p>
+					</li>
+				</ul>
+			</section>
+		</main>
+
+		<!--Footer-->
+		<footer class="footer">
 			<a href="./index.html" class="logo text" lang="en"><span>Web</span>Studio</a>
-
-			<!--Навигация на другие страницы-->
-			<ul class="site-nav list ">
-				<li><a href="./index.html" class="link text">Студия</a></li>
-				<li><a href="./Portfolio.html" class="link text">Портфолио</a></li>
-				<li><a href="" class="link text">Контакты</a></li>
-			</ul>
-		</nav>
-
-		<!--Контакты-->
-		<ul class="contact-header list">
-			<li><a href="mailto:info@devstudio.com" class="link text">info@devstudio.com</a></li>
-			<li><a href="tel:+380961111111" class="link text">+38 096 111 11 11</a></li>
-		</ul>
-	</header>
-
-	<!--Уникальный контент страницы-->
-	<main>
-
-	<!--Герой-->
-	<section class="section-hero">
-		<h1 class="hero-title">Эффективные решения<br> для вашего бизнеса</h1>
-		<button type="button" class="button">Заказать услугу</button>
-	</section>
-
-	<!--Профессиональные качества-->
-	<section class="section">
-		<ul class="section-quality list">
-			<li>
-				<h3 class="section-title">Внимание к деталям</h3>
-				<p>
-					Идейные соображения, а также начало повседневной работы по формированию позиции.
-				</p>
-			</li>
-			<li>
-				<h3 class="section-title">Пунктуальность</h3>
-				<p>
-					Задача организации, в особенности же рамки и место обучения кадров влечет за собой.
-				</p>
-			</li>
-			<li>
-				<h3 class="section-title">Планирование</h3>
-				<p>
-					Равным образом консультация с широким активом в значительной степени обуславливает.
-				</p>
-			</li>
-			<li>
-				<h3 class="section-title">Современные технологии</h3>
-				<p>
-					Значимость этих проблем настолько очевидна, что реализация плановых заданий.
-				</p>
-			</li>
-		</ul>
-	</section>
-
-	<!--Чем мы занимаемся-->
-	<section class="examples">
-		<h2 class="section-title">Чем мы занимаемся</h2>
-		<ul class="section-examples list">
-			<li>
-				<img src="./images/working_out/img_1.jpg" alt="проектирование" width="370" height="294">
-			</li>
-			<li>
-				<img src="./images/working_out/img_2.jpg" alt="дизайн" width="370" height="294">
-			</li>
-			<li>
-				<img src="./images/working_out/img_3.jpg" alt="интерактивность" width="370" height="294">
-			</li>
-		</ul>
-	</section>
-
-	<!--Презентация команды-->
-	<section class="section-team">
-		<h2 class="section-title">Наша команда</h2>
-		<ul class="team-members list">
-			<li class="members-name">
-				<img src="./images/team/img_team_1.jpg" alt="сотрудник команды игорь" width="270" height="260">
-				<h3 class="section-title">Игорь Демьяненко</h3>
-				<p>Product Designer</p>
-			</li>
-			<li class="members-name">
-				<img src="./images/team/img_team_2.jpg" alt="coотрудник команды ольга" width="270" height="260">
-				<h3 class="section-title">Ольга Репина</h3>
-				<p>Frontend Developer</p>
-			</li>
-			<li class="members-name">
-				<img src="./images/team/img_team_3.jpg" alt="cотрудник команды николай" width="270" height="260">
-				<h3 class="section-title">Николай Тарасов</h3>
-				<p>Marketing</p>
-			</li>
-			<li class="members-name">
-				<img src="./images/team/img_team_4.jpg" alt="cотрудник команды михаил" width="270" height="260">
-				<h3 class="section-title">Михаил Ермаков</h3>
-				<p>UI Designer</p>
-			</li>
-		</ul>
-	</section>
-	</main>
-
-	<!--Адресные данные (футер)-->
-	<footer class="footer">
-		<a href="./index.html" class="logo text" lang="en"><span>Web</span>Studio</a>
-		<address class="address">
-			<ul class="footer-contacts list">
-				<li>
-					<a href="https://goo.gl/maps/fqdsJeKu8w5rpEoA8" class="our-address text" target="_blank" rel="noopener noreferrer">г. Киев, пр-т Леси
-						Украинки, 26</a>
-				</li>
-				<li>
-					<a href="mailto:info@example.com" class="link text">info@example.com</a>
-				</li>
-				<li>
-					<a href="tel:+380991111111" class="link text">+38 099 111 11 11</a>
-				</li>
-			</ul>
-		</address>
-	</footer>
-</body>
+			<address class="address">
+				<ul class="footer-contacts list">
+					<li>
+						<a href="https://goo.gl/maps/fqdsJeKu8w5rpEoA8" class="our-address text" target="_blank" rel="noopener noreferrer">г. Киев, пр-т Леси
+							Украинки, 26</a>
+					</li>
+					<li>
+						<a href="mailto:info@example.com" class="link text">info@example.com</a>
+					</li>
+					<li>
+						<a href="tel:+380991111111" class="link text">+38 099 111 11 11</a>
+					</li>
+				</ul>
+			</address>
+		</footer>
+	</body>
 </html>
