--- a/Portfolio.html
+++ b/Portfolio.html
@@ -31,15 +31,13 @@
       </ul>
     </header>
 
-    <main>
-
-      <!-- Hidden title 1 -->
+    <main>      <!-- Hidden title -->
       <h1 class="hidden-title">проекты вебстудио</h1>
 
       <!--Portfolio navigation-->
       <section class="nav-portfolio">
 
-        <!-- Hidden title 2 -->
+        <!-- Hidden title -->
         <h2 class="hidden-title">фильтры</h2>
 
         <!-- Filters list -->
@@ -61,53 +59,53 @@
           </li>
         </ul>
 
-        <!-- Hidden title 3 -->
+        <!-- Hidden title -->
         <h2 class="hidden-title">наши работы</h2>
 
         <!-- Works list -->
         <ul class="portfolio-works list">
           <li>
-            <img src="./images/Portfolio/img.jpg" alt="" width="370px" height="294px">
+            <img src="./images/portfolio/img.jpg" alt="" width="370" height="294">
             <h3 class="section-title">Технокряк</h3>
             <p>Веб-сайт</p>
           </li>
           <li>
-            <img src="./images/Portfolio/img-1.jpg" alt="" width="370px" height="294px">
+            <img src="./images/Portfolio/img-1.jpg" alt="" width="370" height="294">
             <h3 class="section-title">Постер New Orlean vs Golden Star</h3>
             <p>Дизайн</p>
           </li>
           <li>
-            <img src="./images/Portfolio/img-2.jpg" alt="" width="370px" height="294px">
+            <img src="./images/Portfolio/img-2.jpg" alt="" width="370" height="294">
             <h3 class="section-title">Ресторан Seafood</h3>
             <p>Приложение</p>  
           </li>
           <li>
-            <img src="./images/Portfolio/img-3.jpg" alt="" width="370px" height="294px">
+            <img src="./images/Portfolio/img-3.jpg" alt="" width="370" height="294">
             <h3 class="section-title">Проект Prime</h3>
             <p>Маркетинг</p>
           </li>
           <li>
-            <img src="./images/Portfolio/img-4.jpg" alt="" width="370px" height="294px">
+            <img src="./images/Portfolio/img-4.jpg" alt="" width="370" height="294">
             <h3 class="section-title">Проект Boxes</h3>
             <p>Приложение</p>
           </li>
           <li>
-            <img src="./images/Portfolio/img-5.jpg" alt="" width="370px" height="294px">
+            <img src="./images/Portfolio/img-5.jpg" alt="" width="370" height="294">
             <h3 class="section-title">Inspiration has no Borders</h3>
             <p>Веб-сайт</p>
           </li>
           <li>
-            <img src="./images/Portfolio/img-6.jpg" alt="" width="370px" height="294px">
+            <img src="./images/Portfolio/img-6.jpg" alt="" width="370" height="294">
             <h3 class="section-title">Издание Limited Edition</h3>
             <p>Дизайн</p>
           </li>
           <li>
-            <img src="./images/Portfolio/img-7.jpg" alt="" width="370px" height="294px">
+            <img src="./images/Portfolio/img-7.jpg" alt="" width="370" height="294">
             <h3 class="section-title">Проект LAB</h3>
             <p>Маркетинг</p>
           </li>
           <li>
-            <img src="./images/Portfolio/img-8.jpg" alt="" width="370px" height="294px">
+            <img src="./images/Portfolio/img-8.jpg" alt="" width="370" height="294">
             <h3 class="section-title">Growing Business</h3>
             <p>Приложение</p>
           </li>
