--- a/index.html
+++ b/index.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
 <html lang="ru">
-
- <head>
+	<head>
 	 <meta charset="UTF-8">
 	 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 	 <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -13,7 +12,6 @@
  </head>
 
 	<body>
-		<!--Header-->
 		<header class="page-header">
 			<nav>
 				<a href="./index.html" class="logo text" lang="en"><span>Web</span>Studio</a>
@@ -33,7 +31,6 @@
 				</ul>
 		</header>
 
-		<!--Unique page content-->
 		<main>
 
 		<!--Hero-->
@@ -42,14 +39,14 @@
 				<button type="button" class="button">Заказать услугу</button>
 			</section>
 
-			<!--Professional quality-->
+			<!--Our qualities-->
 			<section class="section-quality">
 
-				<!-- Hidden title -->
-				<h2 class="hidden-title">профессиональные качества</h2>
+				<!--Hidden title-->
+				<h2 class="visually-hidden">профессиональные качества</h2>
 
-				<!-- Qualities list -->
-				<ul class="qualities-list list">
+				<!--Qualities list-->
+				<ul class="qualities list">
 					<li>
 						<h3 class="section-title">Внимание к деталям</h3>
 						<p>
@@ -77,10 +74,10 @@
 				</ul>
 			</section>
 
-			<!--What are we doing-->
-			<section class="section-we-doing">
+			<!--Our work-->
+			<section class="section-work">
 				<h2 class="section-title">Чем мы занимаемся</h2>
-				<ul class="we-doing-examples list">
+				<ul class="work-examples list">
 					<li>
 						<img src="./images/working_out/img_1.jpg" alt="проектирование" width="370" height="294">
 					</li>
@@ -93,7 +90,7 @@
 				</ul>
 			</section>
 
-		<!--Team presentation-->
+		<!--Team-->
 			<section class="section-team">
 				<h2 class="section-title">Наша команда</h2>
 				<ul class="team-members list">
@@ -121,7 +118,6 @@
 			</section>
 		</main>
 
-		<!--Footer-->
 		<footer class="footer">
 			<a href="./index.html" class="logo text" lang="en"><span>Web</span>Studio</a>
 			<address class="address">
