--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
 
 				<!--Site navigation-->
 				<ul class="site-nav list ">
-					<li><a href="./index.html" class="link text">Студия</a></li>
-					<li><a href="./Portfolio.html" class="link text">Портфолио</a></li>
-					<li><a href="" class="link text">Контакты</a></li>
+					<li><a href="./index.html" class="active text">Студия</a></li>
+					<li><a href="./Portfolio.html" class="text">Портфолио</a></li>
+					<li><a href="" class="text">Контакты</a></li>
 				</ul>
 			</nav>
 
