--- a/Portfolio.html
+++ b/Portfolio.html
@@ -17,9 +17,9 @@
       
         <!--Site navigation-->
         <ul class="site-nav list">
-          <li><a href="./index.html" class="link text">Студия</a></li>
-          <li><a href="./Portfolio.html" class="link text">Портфолио</a></li>
-          <li><a href="" class="link text">Контакты</a></li>
+          <li><a href="./index.html" class="text">Студия</a></li>
+          <li><a href="./Portfolio.html" class="active text">Портфолио</a></li>
+          <li><a href="" class="text">Контакты</a></li>
         </ul>
       </nav>
       
